# vet-ai

./: .env.example  .env.exemple  .env.production  .env.training  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.training  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  quick_train_test.py  requirements-training.txt  requirements.txt  test_id_consistency.py  test_refactored_training.py  train_eks.py  train_local.py
.github/workflows/: ci.yml  continuous-training.yml  docker-publish.yml
ai-service/: Dockerfile  continuous_training.py  main.py  requirements.txt
ai-service/models/v1/: input_schema.json  metrics.json  (+1 more)
ai-service/tests/: conftest.py
ai_service/: Dockerfile  __init__.py  auth.py  clinic_scope.py  clinics_catalog.py  continuous_training.py  data_drift.py  main.py  metrics.py  mlflow_alignment.py  mlops_api.py  mlops_api_v2.py  mlops_champion_challenger.py  mlops_manager.py  model_monitor.py  model_registry.py  model_s3_artifact.py  requirements.txt  training_engine.py
ai_service/app/: __init__.py  main.py
ai_service/tests/: conftest.py  test_api.py  test_smoke.py
ai_service/ui/: index.html
docker/: Dockerfile.api  Dockerfile.training  compose.dev.yml
docs/: api-contract.md  architecture.md  deployment.md  local-dev.md
env/: .env.ci  .env.dev  .env.example
k8s/: champion-challenger-deployment.yaml
monitoring/grafana/: README.md
monitoring/prometheus/: README.md
scripts/: deploy_champion_challenger.sh  deploy_production.sh  smoke_test.sh  train_eks.py  train_local.py  verify_model_storage.py
(+62 files in other folders)
