[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "mlruns", "logs", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ai_service"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["ai_service/tests"]
pythonpath = ["."]
